[package]
name = "nss_dynhosts"
version = "0.1.1"
edition = "2021"

[lib]
name = "nss_dynhosts"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.0"
lazy_static = "1.3.0"
paste = "1.0.12"
libnss = "0.4.0"
toml = { version = "0.7.4", features = ["preserve_order"] }
serde = { version = "1.0.163", features = ["derive"] }
indexmap = { version = "1.9.3", features = ["serde"] }
anyhow = "1.0.71"
handlebars = "4.3.7"
